changing icons over to IcoMoon

--- a/app/assets/stylesheets/partials/base/_fonts.scss
+++ b/app/assets/stylesheets/partials/base/_fonts.scss
@@ -10,11 +10,11 @@
 -------------------------------------------------------*/
 @font-face {
 	font-family: "icons";
-	src: asset-url("fonts/icons/fontello.eot");
-	src: asset-url("fonts/icons/fontello.eot#iefix") format('embedded-opentype'),
-	   asset-url("fonts/icons/fontello.woff") format('woff'),
-	   asset-url("fonts/icons/fontello.ttf") format('truetype'),
-	   asset-url("fonts/icons/fontello.svg#fontello") format('svg');
+	src: 	asset-url("fonts/icons/icomoon.eot");
+	src:	asset-url("fonts/icons/icomoon.eot#iefix") format('embedded-opentype'),
+	   		asset-url("fonts/icons/icomoon.woff") format('woff'),
+	   		asset-url("fonts/icons/icomoon.ttf") format('truetype'),
+	   		asset-url("fonts/icons/icomoon.svg#icomoon") format('svg');
 	font-weight: normal;
 	font-style: normal;
 }
