adding new module

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -125,6 +125,7 @@ Global stylesheet
 @import "partials/modules/centres-list";
 @import "partials/modules/timeline";
 @import "partials/modules/deal-main";
+@import "partials/modules/stores-maps";
 
 
   /* Modules -> Widgets */
