adding fix for absolutely positioned elements in 'main'

--- a/app/assets/stylesheets/partials/layout/_main.scss
+++ b/app/assets/stylesheets/partials/layout/_main.scss
@@ -3,6 +3,9 @@
    ====================================================================================== */
 
 .main {
+  /* This ensures any absolutely positioned elements with `.main` will never overlap the fixed header */
+  position: relative;
+  z-index: 1;
 
 	/* Turn off `.container` rules for detail views */
 	.page-detail-view & {width: auto;}
