--- a/app/views/products/new-index.html.erb
+++ b/app/views/products/new-index.html.erb
@@ -1,6 +1,4 @@
 <div ng-app="Westfield">
-  <div ng-view></div>
-
   <!-- Used to list 'super_cat' and 'category' -->
   <script type="text/ng-template" id="categoryItemTemplate">
     <ul>
@@ -24,118 +22,116 @@
     </ul>
   </script>
 
-  <script type="text/ng-template" id="productBrowseTemplate">
-    <form ng-submit="updateSearch()" method="get">
-      <div ng-switch on="search.categories.field" class="select-filter categories">
-        <div ng-switch-when="super_cat" ng-include src="'categoryItemTemplate'"></div>
-        <div ng-switch-when="category" ng-include src="'categoryItemTemplate'"></div>
-        <div ng-switch-when="sub_category" ng-include src="'SubCategoryTemplate'"></div>
-      </div>
+  <form ng-controller="ProductBrowseController" ng-submit="updateSearch()" method="get">
+    <div ng-switch on="search.categories.field" class="select-filter categories">
+      <div ng-switch-when="super_cat" ng-include src="'categoryItemTemplate'"></div>
+      <div ng-switch-when="category" ng-include src="'categoryItemTemplate'"></div>
+      <div ng-switch-when="sub_category" ng-include src="'SubCategoryTemplate'"></div>
+    </div>
 
-      <!-- Retailers -->
-      <div ng-if="filterIsAvailable('retailer')" class="select-filter">
-        <button ng-click="mvFilterSearch( 'retailers' )" class="btn btn--main btn--sml">Apply</button>
-        <input ng-model="storeSearch" type="search" placeholder="Enter a store name">
+    <!-- Retailers -->
+    <div ng-if="filterIsAvailable('retailer')" class="select-filter">
+      <button ng-click="mvFilterSearch( 'retailers' )" class="btn btn--main btn--sml">Apply</button>
+      <input ng-model="storeSearch" type="search" placeholder="Enter a store name">
 
-        <ul class="box arrow--up">
-          <li ng-repeat="retailer in search.retailers.values | filter: storeSearch | limitTo: 250">
-            <input ng-model="retailer.selected"
-                   ng-checked="retailer.selected"
-                   value="{{ retailer.code }}"
-                   id="retailer_{{ retailer.code }}"
-                   type="checkbox">
-
-            <label for="retailer_{{ retailer.code }}">{{ retailer.name }} ({{ retailer.count }})</label>
-          </li>
-        </ul>
-      </div>
-
-      <!-- Brands -->
-      <div ng-if="filterIsAvailable('brand')" class="select-filter brand">
-        <button ng-click="mvFilterSearch( 'brands' )" class="btn btn--main btn--sml">Apply</button>
-        <input ng-model="brandSearch" type="search" placeholder="Enter a brand name">
-
-        <ul class="box arrow--up">
-          <li ng-repeat="brand in search.brands.values | filter: brandSearch | limitTo: 250">
-            <input ng-model="brand.selected"
-                   ng-checked="brand.selected"
-                   value="{{ brand.code }}"
-                   id="brand_{{ brand.code }}"
-                   type="checkbox">
-            <label for="brand_{{ brand.code }}">{{ brand.name }} ({{ brand.count }})</label>
-          </li>
-        </ul>
-      </div>
-
-      <!-- Colour -->
-      <div ng-if="filterIsAvailable('colour')" class="select-filter colour">
-        <button ng-click="mvFilterSearch( 'colours' )" class="btn btn--main btn--sml">Apply</button>
-        <ul class="box arrow--up">
-          <li ng-repeat="colour in search.colours.values">
-            <input ng-model="colour.selected"
-                   ng-checked="colour.selected"
-                   value="{{ colour.code }}"
-                   id="colour_{{ colour.code }}"
-                   type="checkbox">
-            <label for="colour_{{ colour.code }}">{{ colour.name }} ({{ colour.count }})</label>
-          </li>
-        </ul>
-      </div>
-
-      <!-- Size -->
-      <div ng-if="filterIsAvailable('size')" class="select-filter size">
-        <button ng-click="mvFilterSearch( 'sizes' )" class="btn btn--main btn--sml">Apply</button>
-        <ul class="box arrow--up">
-          <li ng-repeat="size in search.sizes.values">
-            <input ng-model="size.selected"
-                   ng-checked="size.selected"
-                   value="{{ size.code }}"
-                   id="size_{{ size.code }}"
-                   type="checkbox">
-            <label for="size_{{ size.code }}">{{ size.name }} ({{ size.count }})</label>
-          </li>
-        </ul>
-      </div>
-
-      <!-- Price -->
-      <div ng-if="filterIsAvailable('price')" class="box">
-        Price range
-        <input ng-model="search.price.range_start" ng-change="rangeFilter('price')" type="text">
-        <input ng-model="search.price.range_end" ng-change="rangeFilter('price')" type="text">
-      </div>
-
-      <div class="select-filter on-sale">
-        <label for="sale-items">
-          Sale items only:
-          <input ng-model="on_sale"
-                 ng-checked="search.params.on_sale"
-                 ng-change="filterSearch('on_sale')"
+      <ul class="box arrow--up">
+        <li ng-repeat="retailer in search.retailers.values | filter: storeSearch | limitTo: 250">
+          <input ng-model="retailer.selected"
+                 ng-checked="retailer.selected"
+                 value="{{ retailer.code }}"
+                 id="retailer_{{ retailer.code }}"
                  type="checkbox">
-        </label>
-      </div>
 
-      <label>
-        Sort by:
-        <select ng-model="sort"
-                ng-change="filterSearch('sort')"
-                ng-options="option.code as option.description for option in search.sortOptions | filter:{display: true}"
-                class="sort-options"></select>
-      </label>
-    </form>
-
-    <div class="selected-filters">
-      <ul class="tags horiz-list">
-        <li ng-repeat="filter in search.appliedFilters">
-          {{ filter.title }}
-          <button ng-click="removeSelectedFilter( filter.type, filter.value )" class="btn">
-            <span class="icon icon--close-sml icon--flush-top" aria-hidden="true">
-            <span class="hide-visually">Close</span>
-          </button>
+          <label for="retailer_{{ retailer.code }}">{{ retailer.name }} ({{ retailer.count }})</label>
         </li>
       </ul>
-      <button ng-click="clearFilters()" class="btn btn--faux-link">Clear all</div>
     </div>
-  </script>
+
+    <!-- Brands -->
+    <div ng-if="filterIsAvailable('brand')" class="select-filter brand">
+      <button ng-click="mvFilterSearch( 'brands' )" class="btn btn--main btn--sml">Apply</button>
+      <input ng-model="brandSearch" type="search" placeholder="Enter a brand name">
+
+      <ul class="box arrow--up">
+        <li ng-repeat="brand in search.brands.values | filter: brandSearch | limitTo: 250">
+          <input ng-model="brand.selected"
+                 ng-checked="brand.selected"
+                 value="{{ brand.code }}"
+                 id="brand_{{ brand.code }}"
+                 type="checkbox">
+          <label for="brand_{{ brand.code }}">{{ brand.name }} ({{ brand.count }})</label>
+        </li>
+      </ul>
+    </div>
+
+    <!-- Colour -->
+    <div ng-if="filterIsAvailable('colour')" class="select-filter colour">
+      <button ng-click="mvFilterSearch( 'colours' )" class="btn btn--main btn--sml">Apply</button>
+      <ul class="box arrow--up">
+        <li ng-repeat="colour in search.colours.values">
+          <input ng-model="colour.selected"
+                 ng-checked="colour.selected"
+                 value="{{ colour.code }}"
+                 id="colour_{{ colour.code }}"
+                 type="checkbox">
+          <label for="colour_{{ colour.code }}">{{ colour.name }} ({{ colour.count }})</label>
+        </li>
+      </ul>
+    </div>
+
+    <!-- Size -->
+    <div ng-if="filterIsAvailable('size')" class="select-filter size">
+      <button ng-click="mvFilterSearch( 'sizes' )" class="btn btn--main btn--sml">Apply</button>
+      <ul class="box arrow--up">
+        <li ng-repeat="size in search.sizes.values">
+          <input ng-model="size.selected"
+                 ng-checked="size.selected"
+                 value="{{ size.code }}"
+                 id="size_{{ size.code }}"
+                 type="checkbox">
+          <label for="size_{{ size.code }}">{{ size.name }} ({{ size.count }})</label>
+        </li>
+      </ul>
+    </div>
+
+    <!-- Price -->
+    <div ng-if="filterIsAvailable('price')" class="box">
+      Price range
+      <input ng-model="search.price.range_start" ng-change="rangeFilter('price')" type="text">
+      <input ng-model="search.price.range_end" ng-change="rangeFilter('price')" type="text">
+    </div>
+
+    <div class="select-filter on-sale">
+      <label for="sale-items">
+        Sale items only:
+        <input ng-model="on_sale"
+               ng-checked="search.params.on_sale"
+               ng-change="filterSearch('on_sale')"
+               type="checkbox">
+      </label>
+    </div>
+
+    <label>
+      Sort by:
+      <select ng-model="sort"
+              ng-change="filterSearch('sort')"
+              ng-options="option.code as option.description for option in search.sortOptions | filter:{display: true}"
+              class="sort-options"></select>
+    </label>
+  </form>
+
+  <div class="selected-filters">
+    <ul class="tags horiz-list">
+      <li ng-repeat="filter in search.appliedFilters">
+        {{ filter.title }}
+        <button ng-click="removeSelectedFilter( filter.type, filter.value )" class="btn">
+          <span class="icon icon--close-sml icon--flush-top" aria-hidden="true">
+          <span class="hide-visually">Close</span>
+        </button>
+      </li>
+    </ul>
+    <button ng-click="clearFilters()" class="btn btn--faux-link">Clear all</div>
+  </div>
 
   <div ng-controller="ProductsController" class="product-results">
     <div ng-hide="products.loaded" class="spinner"><h1>Loading</h1></div>
