Added initial tag styles

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -133,6 +133,7 @@ hr { clear: both; }
 @import "partials/modules/tile";
 @import "partials/modules/detail-view";
 @import "partials/modules/social-share";
+@import "partials/modules/tags";
 @import "partials/modules/pin-board";
 @import "partials/modules/centres-list";
 @import "partials/modules/timeline";
