--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -210,16 +210,15 @@
 			<!-- //Global search -->
 
 			<!-- Store search -->
-			<!-- [BACK END] the HTML for the store search is only rendered on the 'Stores' page -->
-			<!-- <div class="header__overlay header__overlay--stick">
+			<div class="header__overlay header__overlay--stick">
 					<div class="container">
 						<form class="search-mini search-mini--stores" action="#" method="post" role="search">
-						<span class="icon icon--store" aria-hidden="true"></span>
-						<label for="store-search" class="hide-visually">Search stores</label>
-						<input type="search" class="search-mini__input" id="store-search" name="store-search" placeholder="Search store names, categories &amp; brands&#8230;">
+							<span class="icon icon--store" aria-hidden="true"></span>
+							<label for="store-search" class="hide-visually">Search stores</label>
+							<input type="search" class="search-mini__input" id="store-search" name="store-search" placeholder="Search store names, categories &amp; brands&#8230;">
 					</form>
 				</div>
-			</div> -->
+			</div>
 			<!-- //Store search -->
 
 		</div>
