--- a/app/views/stores/index.html.erb
+++ b/app/views/stores/index.html.erb
@@ -1,6 +1,6 @@
 <div class="stores-maps">
   <div class="map-micello">
-    <%= render partial: 'shared/map', locals: {store_id: nil, js_disabled: false} %>
+    <%= render partial: 'shared/map', locals: {store_id: nil, interactive: true} %>
   </div>
 </div>
 
