--- a/app/views/deals/show.html.erb
+++ b/app/views/deals/show.html.erb
@@ -4,7 +4,7 @@
   <div class="grid__item non-palm-one-half">
     <div class="island detail-view__divider--palm">
       <header class="deal-main box box--torn">
-        <h2 class="deal-main__hdr"><%= @deal.title %></h2>
+        <h1 class="deal-main__hdr" id="detail-view__hdr"><%= @deal.title %></h1>
         <p class="deal-main__meta">from <%= @store.name %> <span>Deal ends <time datetime="<%= @deal.available_to.strftime("%Y-%m-%d") %>"><%= @deal.available_to.strftime("%A %e %B") %></time></span></p>
       </header>
     </div>
@@ -41,7 +41,7 @@
 <!-- Availability -->
 <% if @deal.stores and @deal.stores.size > 1 %>
 <div class="island detail-view__availability">
-  <h3 class="detail-view__hdr-sub detail-view__mrg-off hn">Also available at</h3>
+  <h2 class="detail-view__hdr-sub detail-view__mrg-off hn">Also available at</h2>
   <ul class="detail-view__centres">
     <% @deal.stores.each do |store| %>
       <% unless store.id == @store.id %>
@@ -56,7 +56,7 @@
 <!-- Fine print -->
 <% if @deal.terms_and_conditions and !@deal.terms_and_conditions.empty? %>
 <div class="detail-view__desc detail-view__desc--fine-print detail-view__subtle-txt toggle-content js-toggle-content js-hide-show island">
-  <h3 class="detail-view__hdr-sub hn">The fine print</h3>
+  <h2 class="detail-view__hdr-sub hn">The fine print</h2>
   <% @deal.terms_and_conditions.each do |paragraph| %>
     <% unless paragraph.empty? %><p><%= paragraph %></p><% end %>
   <% end %>
