--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -2,10 +2,7 @@
 
   <div class="island detail-view__divider">
     <header class="detail-view__mrg-base">
-      <h2 class="detail-view__hdr hn" id="detail-view__hdr">
-        <%= @event.name %>
-      </h2>
-
+      <h1 class="detail-view__hdr hn" id="detail-view__hdr"><%= @event.name %></h1>
       <ul class="detail-view__meta islet islet--top-btm detail-view__divider detail-view__divider--top-btm horiz-list horiz-list--fit">
         <li class="detail-view__subtle-txt"><%= @event.start '%d %b %Y' %> to <%= @event.finish '%d %b %Y' %></li><!--
       --><li><span class="icon icon--pin icon--lrg icon--spacing" aria-hidden="true"></span><span itemprop="location"><%= @event.location %></span></li>
@@ -16,22 +13,19 @@
       <%= image_tag ImageService.transform(ref: @event.image_ref, size: "800x800"), alt: @event.name, itemprop: "photo" %>
     </div>
 
-    <h3 class="detail-view__hdr-sub hn">Event Details</h3>
+    <h2 class="detail-view__hdr-sub hn">Event Details</h2>
     <div class="detail-view__desc">
       <p itemprop="summary"><%= @event.description %></p>
-
       <div itemprop="description">
         <% @event.body.each do |paragraph| %>
           <p><%= paragraph %></p>
         <% end %>
       </div>
-
     </div>
   </div>
 
   <div class="detail-view__schedule island">
-    <h3 class="detail-view__hdr-sub hn">Event Schedule</h3>
-
+    <h2 class="detail-view__hdr-sub hn">Event Schedule</h2>
     <dl class="timeline">
       <dt>
         <%= @event.start '%A' %>
@@ -45,7 +39,6 @@
         <time itemprop="endDate" datetime="<%= @event.finish %>"><%= @event.finish '%l:%M%P' %></time>
       </dd>
     </dl>
-
   </div>
 
 </div>
