--- a/app/assets/stylesheets/partials/modules/_tags.scss
+++ b/app/assets/stylesheets/partials/modules/_tags.scss
@@ -3,10 +3,20 @@
   Styleguide Module - Tag
 */
 .tags {
-  li {
-    @include to-rem(margin-right padding, $spacing-quarter);
+  border-width: 1px 0;
+  border-style: solid;
+  border-color: $color-grey-1;
+
+  @include to-rem(margin-top, $spacing-base);
+  @include to-rem(padding-top, $spacing-quarter);
+  @include to-rem(padding-bottom, $spacing-quarter*2);
+
+  .btn {
+    @include to-rem(margin-right margin-top, $spacing-quarter);
+    @include to-rem(padding, $spacing-third);
     @include to-rem(padding-left, $spacing-half);
     @include to-rem(padding-right, $spacing-base);
+
     position: relative;
 
     @include font-size($font-size-sml, 1);
@@ -14,12 +24,19 @@
 
     border: 1px solid $color-grey-1;
     border-radius: $border-radius;
+
+    .icon {
+      position: absolute;
+      top: 50%;
+      @include to-rem(margin-top, -8);
+      @include to-rem(right, $spacing-micro);
+      color: $color-light-txt;
+    }
   }
 
-  .btn {
-    position: absolute;
-    top: 0;
-    right: 0;
-    color: $color-light-txt;
+  .btn--faux-link {
+    border: 0;
+    padding-left: 0;
+    padding-right: 0;
   }
 }
