--- a/app/views/products/new-index.html.erb
+++ b/app/views/products/new-index.html.erb
@@ -1,143 +1,184 @@
 <div ng-app="Westfield">
   <!-- Used to list 'super_cat' and 'category' -->
   <script type="text/ng-template" id="categoryItemTemplate">
-    <ul>
-      <li ng-repeat="category in search.categories.values | orderBy: 'sort_order'">
-        <a href="" ng-click="filterCategory( search.categories.field, category.code )">{{ category.name }} ({{ category.count }})</a>
-      </li>
-    </ul>
+    <dl>
+      <dt class="filters__hdr">
+        {{search.categories.title}}
+        <button class="btn">
+          <span class="icon icon--arrow-left-big icon--lrg icon--flush-top" aria-hidden="true">
+          <span class="hide-visually">Back</span>
+        </button>
+      </dt>
+      <dd ng-repeat="category in search.categories.values | orderBy: 'sort_order'">
+        <button ng-click="filterCategory( search.categories.field, category.code )" class="btn btn--full btn--full-left btn--pointer">
+          {{ category.name }} ({{ category.count }})
+
+          <span class="btn--pointer__icon icon icon--arrow-right-big icon--lrg icon--flush-top" aria-hidden="true"></span>
+        </button>
+      </dd>
+    </dl>
   </script>
 
   <script type="text/ng-template" id="SubCategoryTemplate">
-    <button ng-click="mvFilterSearch( 'categories' )" class="btn btn--main btn--sml">Apply</button>
-    <ul class="box arrow--up">
-      <li ng-repeat="category in search.categories.values | orderBy: 'sort_order'">
-        <input ng-model="category.selected"
-               ng-checked="category.selected"
-               value="{{ category.code }}"
-               id="category_{{ category.code }}"
-               type="checkbox">
-        <label for="category_{{ category.code }}">{{ category.name }} ({{ category.count }})</label>
-      </li>
-    </ul>
+    <dl>
+      <dt class="filters__hdr">
+        {{search.categories.title}}
+        <button class="btn">
+          <span class="icon icon--arrow-left-big icon--lrg icon--flush-top" aria-hidden="true">
+          <span class="hide-visually">Back</span>
+        </button>
+      </dt>
+      <dd ng-repeat="category in search.categories.values | orderBy: 'sort_order'">
+        <label for="category_{{ category.code }}">
+          <input ng-model="category.selected"
+                 ng-checked="category.selected"
+                 value="{{ category.code }}"
+                 id="category_{{ category.code }}"
+                 type="checkbox">
+          {{ category.name }} ({{ category.count }})
+        </label>
+      </dd>
+    </dl>
+    <button ng-click="mvFilterSearch( 'categories' )" class="btn btn--main btn--sml filters__apply">Apply</button>
   </script>
 
-  <form ng-controller="ProductBrowseController" ng-submit="updateSearch()" method="get">
-    <div ng-switch on="search.categories.field" class="select-filter categories">
-      <div ng-switch-when="super_cat" ng-include src="'categoryItemTemplate'"></div>
-      <div ng-switch-when="category" ng-include src="'categoryItemTemplate'"></div>
-      <div ng-switch-when="sub_category" ng-include src="'SubCategoryTemplate'"></div>
+  <div ng-controller="ProductBrowseController">
+    <div class="filters drop-down-container">
+      <button class="js-drop-down-trigger btn btn--main btn--main-alt2 btn--pointer hide-fully--non-palm">
+        Filter
+        <span class="icon icon--lrg icon--arrow-down-full icon--flush-top btn--pointer__icon" aria-hidden="true"></span>
+      </button>
+
+      <div class="drop-down box js-drop-down">
+        <ul>
+          <li>
+            <button class="btn btn--full filters__hdr">Category</button>
+            <div ng-switch on="search.categories.field" class="filters__list categories">
+              <div ng-switch-when="super_cat" ng-include src="'categoryItemTemplate'"></div>
+              <div ng-switch-when="category" ng-include src="'categoryItemTemplate'"></div>
+              <div ng-switch-when="sub_category" ng-include src="'SubCategoryTemplate'"></div>
+            </div>
+          </li>
+          <li ng-if="filterIsAvailable('retailer')"><button class="btn">Stores</button></li>
+          <li ng-if="filterIsAvailable('brand')"><button class="btn">Brands</button></li>
+          <li ng-if="filterIsAvailable('colour')"><button class="btn">Colour</button></li>
+          <li ng-if="filterIsAvailable('size')"><button class="btn">Size</button></li>
+          <li ng-if="filterIsAvailable('price')"><button class="btn">Price</button></li>
+          <li><button>On Sale</button></li>
+        </ul>
+
+        <!-- Retailers -->
+        <div ng-if="filterIsAvailable('retailer')" class="select-filter">
+          <button ng-click="mvFilterSearch( 'retailers' )" class="btn btn--main btn--sml">Apply</button>
+          <input ng-model="storeSearch" type="search" placeholder="Enter a store name">
+
+          <ul class="box arrow--up">
+            <li ng-repeat="retailer in search.retailers.values | filter: storeSearch | limitTo: 250">
+              <input ng-model="retailer.selected"
+                     ng-checked="retailer.selected"
+                     value="{{ retailer.code }}"
+                     id="retailer_{{ retailer.code }}"
+                     type="checkbox">
+
+              <label for="retailer_{{ retailer.code }}">{{ retailer.name }} ({{ retailer.count }})</label>
+            </li>
+          </ul>
+        </div>
+
+        <!-- Brands -->
+        <div ng-if="filterIsAvailable('brand')" class="select-filter brand">
+          <button ng-click="mvFilterSearch( 'brands' )" class="btn btn--main btn--sml">Apply</button>
+          <input ng-model="brandSearch" type="search" placeholder="Enter a brand name">
+
+          <ul class="box arrow--up">
+            <li ng-repeat="brand in search.brands.values | filter: brandSearch | limitTo: 250">
+              <input ng-model="brand.selected"
+                     ng-checked="brand.selected"
+                     value="{{ brand.code }}"
+                     id="brand_{{ brand.code }}"
+                     type="checkbox">
+              <label for="brand_{{ brand.code }}">{{ brand.name }} ({{ brand.count }})</label>
+            </li>
+          </ul>
+        </div>
+
+        <!-- Colour -->
+        <div ng-if="filterIsAvailable('colour')" class="select-filter colour">
+          <button ng-click="mvFilterSearch( 'colours' )" class="btn btn--main btn--sml">Apply</button>
+          <ul class="box arrow--up">
+            <li ng-repeat="colour in search.colours.values">
+              <input ng-model="colour.selected"
+                     ng-checked="colour.selected"
+                     value="{{ colour.code }}"
+                     id="colour_{{ colour.code }}"
+                     type="checkbox">
+              <label for="colour_{{ colour.code }}">{{ colour.name }} ({{ colour.count }})</label>
+            </li>
+          </ul>
+        </div>
+
+        <!-- Size -->
+        <div ng-if="filterIsAvailable('size')" class="select-filter size">
+          <button ng-click="mvFilterSearch( 'sizes' )" class="btn btn--main btn--sml">Apply</button>
+          <ul class="box arrow--up">
+            <li ng-repeat="size in search.sizes.values">
+              <input ng-model="size.selected"
+                     ng-checked="size.selected"
+                     value="{{ size.code }}"
+                     id="size_{{ size.code }}"
+                     type="checkbox">
+              <label for="size_{{ size.code }}">{{ size.name }} ({{ size.count }})</label>
+            </li>
+          </ul>
+        </div>
+
+        <!-- Price -->
+        <div ng-if="filterIsAvailable('price')" class="box">
+          Price range
+          <input ng-model="search.price.range_start" ng-change="rangeFilter('price')" type="text">
+          <input ng-model="search.price.range_end" ng-change="rangeFilter('price')" type="text">
+        </div>
+
+        <div class="select-filter on-sale">
+          <label for="sale-items">
+            Sale items only:
+            <input ng-model="on_sale"
+                   ng-checked="search.params.on_sale"
+                   ng-change="filterSearch('on_sale')"
+                   type="checkbox">
+          </label>
+        </div>
+
+        <label>
+          Sort by:
+          <select ng-model="sort"
+                  ng-change="filterSearch('sort')"
+                  ng-options="option.code as option.description for option in search.sortOptions | filter:{display: true}"
+                  class="sort-options"></select>
+        </label>
+      </div>
     </div>
 
-    <!-- Retailers -->
-    <div ng-if="filterIsAvailable('retailer')" class="select-filter">
-      <button ng-click="mvFilterSearch( 'retailers' )" class="btn btn--main btn--sml">Apply</button>
-      <input ng-model="storeSearch" type="search" placeholder="Enter a store name">
-
-      <ul class="box arrow--up">
-        <li ng-repeat="retailer in search.retailers.values | filter: storeSearch | limitTo: 250">
-          <input ng-model="retailer.selected"
-                 ng-checked="retailer.selected"
-                 value="{{ retailer.code }}"
-                 id="retailer_{{ retailer.code }}"
-                 type="checkbox">
-
-          <label for="retailer_{{ retailer.code }}">{{ retailer.name }} ({{ retailer.count }})</label>
+    <div ng-if="hasActiveFilters()" class="tags divider divider--sml">
+      <ul class="horiz-list">
+        <li ng-repeat="filter in search.appliedFilters">
+          <button ng-click="removeSelectedFilter( filter.type, filter.value )" class="btn">
+            {{ filter.title }}
+            <span class="icon icon--close-sml icon--lrg icon--flush-top" aria-hidden="true">
+            <span class="hide-visually">Close</span>
+          </button>
         </li>
+        <li><button ng-click="clearFilters()" class="btn btn--faux-link">Clear all</div></li>
       </ul>
     </div>
-
-    <!-- Brands -->
-    <div ng-if="filterIsAvailable('brand')" class="select-filter brand">
-      <button ng-click="mvFilterSearch( 'brands' )" class="btn btn--main btn--sml">Apply</button>
-      <input ng-model="brandSearch" type="search" placeholder="Enter a brand name">
-
-      <ul class="box arrow--up">
-        <li ng-repeat="brand in search.brands.values | filter: brandSearch | limitTo: 250">
-          <input ng-model="brand.selected"
-                 ng-checked="brand.selected"
-                 value="{{ brand.code }}"
-                 id="brand_{{ brand.code }}"
-                 type="checkbox">
-          <label for="brand_{{ brand.code }}">{{ brand.name }} ({{ brand.count }})</label>
-        </li>
-      </ul>
-    </div>
-
-    <!-- Colour -->
-    <div ng-if="filterIsAvailable('colour')" class="select-filter colour">
-      <button ng-click="mvFilterSearch( 'colours' )" class="btn btn--main btn--sml">Apply</button>
-      <ul class="box arrow--up">
-        <li ng-repeat="colour in search.colours.values">
-          <input ng-model="colour.selected"
-                 ng-checked="colour.selected"
-                 value="{{ colour.code }}"
-                 id="colour_{{ colour.code }}"
-                 type="checkbox">
-          <label for="colour_{{ colour.code }}">{{ colour.name }} ({{ colour.count }})</label>
-        </li>
-      </ul>
-    </div>
-
-    <!-- Size -->
-    <div ng-if="filterIsAvailable('size')" class="select-filter size">
-      <button ng-click="mvFilterSearch( 'sizes' )" class="btn btn--main btn--sml">Apply</button>
-      <ul class="box arrow--up">
-        <li ng-repeat="size in search.sizes.values">
-          <input ng-model="size.selected"
-                 ng-checked="size.selected"
-                 value="{{ size.code }}"
-                 id="size_{{ size.code }}"
-                 type="checkbox">
-          <label for="size_{{ size.code }}">{{ size.name }} ({{ size.count }})</label>
-        </li>
-      </ul>
-    </div>
-
-    <!-- Price -->
-    <div ng-if="filterIsAvailable('price')" class="box">
-      Price range
-      <input ng-model="search.price.range_start" ng-change="rangeFilter('price')" type="text">
-      <input ng-model="search.price.range_end" ng-change="rangeFilter('price')" type="text">
-    </div>
-
-    <div class="select-filter on-sale">
-      <label for="sale-items">
-        Sale items only:
-        <input ng-model="on_sale"
-               ng-checked="search.params.on_sale"
-               ng-change="filterSearch('on_sale')"
-               type="checkbox">
-      </label>
-    </div>
-
-    <label>
-      Sort by:
-      <select ng-model="sort"
-              ng-change="filterSearch('sort')"
-              ng-options="option.code as option.description for option in search.sortOptions | filter:{display: true}"
-              class="sort-options"></select>
-    </label>
-  </form>
-
-  <div class="selected-filters">
-    <ul class="tags horiz-list">
-      <li ng-repeat="filter in search.appliedFilters">
-        {{ filter.title }}
-        <button ng-click="removeSelectedFilter( filter.type, filter.value )" class="btn">
-          <span class="icon icon--close-sml icon--flush-top" aria-hidden="true">
-          <span class="hide-visually">Close</span>
-        </button>
-      </li>
-    </ul>
-    <button ng-click="clearFilters()" class="btn btn--faux-link">Clear all</div>
   </div>
 
   <div ng-controller="ProductsController" class="product-results">
     <div ng-hide="products.loaded" class="spinner"><h1>Loading</h1></div>
 
     <div ng-show="products.loaded" ng-bind-html-unsafe="products.list"></div>
-
+    <div>{{products.loaded}}</div>
+    {{products.list}}
     <%# Using a !products.loaded on ng-hide so that the loader will be shown immediately %>
     <div ng-hide="!products.loaded" ng-if="!products.list.length">
       <%= render 'products' %>
