Remove development styles Added reference to filter module

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -41,18 +41,6 @@ Global stylesheet
 
 ======================================================================================
 */
-hr { clear: both; }
-.select-filter {
-  /*border: 1px solid red;*/
-  max-width: 175px;
-  float: left;
-  margin-right: 10px;
-}
-
-.product-results { clear: both; }
-.product-results .product { float: left; width: 20%; margin: 2%; }
-.product-results .product .image { max-width: 100%; }
-.multi-facet-list { height: 200px; overflow: scroll; }
 
 /* [IMPORT ALL PARTIALS]
 -------------------------------------------------------*/
@@ -139,6 +127,7 @@ hr { clear: both; }
 @import "partials/modules/timeline";
 @import "partials/modules/deal-main";
 @import "partials/modules/stores-maps";
+@import "partials/modules/filters";
 
 
   /* Modules -> Widgets */
