--- a/app/views/products/new-index.html.erb
+++ b/app/views/products/new-index.html.erb
@@ -168,11 +168,10 @@
             <span class="hide-visually">Close</span>
           </button>
         </li>
-        <li><button ng-click="clearFilters()" class="btn btn--faux-link">Clear all</div></li>
+        <li><button ng-click="clearFilters()" class="btn btn--faux-link">Clear all</button></li>
       </ul>
     </div>
   </div>
-
   <div ng-controller="ProductsController" class="product-results">
     <div ng-hide="products.loaded" class="spinner"><h1>Loading</h1></div>
 
