--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -126,6 +126,8 @@ Global stylesheet
 @import "partials/modules/centres-list";
 @import "partials/modules/timeline";
 @import "partials/modules/deal-main";
+@import "partials/modules/filters";
+@import "partials/modules/drop-down-menu";
 @import "partials/modules/stores-maps";
 @import "partials/modules/filters";
 
